US20968 History Page - Fix spacing

--- a/_assets/stylesheets/components/_timeline.scss
+++ b/_assets/stylesheets/components/_timeline.scss
@@ -1,6 +1,6 @@
 .timeline {
   position: relative;
-  padding: 1rem;
+  padding: 2.75rem 1rem;
   margin: 0 auto;
   max-width: 1500px;
   
@@ -9,11 +9,20 @@
     position: absolute;
     height: 100%;
     display: block;
-    border: 1px solid $cr-orange;
+    border-width: 2px;
+    border-style: solid;
+    border-image: 
+      linear-gradient(
+        to bottom, 
+        rgba(0, 0, 0, 0),
+        $cr-orange .5%, 
+        $cr-orange 99%, 
+        rgba(0, 0, 0, 0)
+      ) 1 100%;
     top: 0;
     
     @media (min-width: $screen-sm) {
-      right: 50%;
+      right: calc(50% - 2px);
     }
   }
   
@@ -34,9 +43,9 @@
   &::after {
     content:"\A";
     border-style: solid;
-    border-width: 10px 15px 10px 0;
+    border-width: 15px 20px 15px 0;
     position: absolute;
-    top: calc(50% - 8px);
+    top: 10%;
     z-index: 1;
     border-color: transparent $cr-orange transparent transparent;
     left: 0;
@@ -57,6 +66,10 @@
       flex-direction: row;
     }
   }
+
+  h3 {
+    line-height: .75;
+  }
 }
 
 
@@ -67,14 +80,23 @@
     
     .timeline-item-text {
       align-self: flex-end;
+
+      &.timeline-item-text-flex-start {
+        align-self: flex-start;
+      }
     }
     
     .timeline-item-img-container {
       align-self: flex-end;
       width: 100%;
       height: 100%;
+      
     }
   }
+}
+
+.timeline-item-img-container {
+  padding-bottom: 24px;
 }
 
 .timeline-item.right {
@@ -88,23 +110,33 @@
 }
 
 .timeline-item {
-  &.timeline-item-mt-n100 {
-    margin-top: -100px;
-  }
+  @media (min-width: $screen-sm) {
+    &.timeline-item-mt-n3p {
+      margin-top: -3%;
+    }
 
-  &.timeline-item-mt-n150 {
-    margin-top: -150px;
-  }
+    &.timeline-item-mt-n5p {
+      margin-top: -5%;
+    }
 
-  &.timeline-item-mt-n200 {
-    margin-top: -200px;
-  }
+    &.timeline-item-mt-n8p {
+      margin-top: -8%;
+    }
 
-  &.timeline-item-mt-n250 {
-    margin-top: -250px;
-  }
+    &.timeline-item-mt-n10p {
+      margin-top: -10%;
+    }
 
-  &.timeline-item-mt-n300 {
-    margin-top: -250px;
+    &.timeline-item-mt-n12p {
+      margin-top: -12%;
+    }
+
+    &.timeline-item-mt-n15p {
+      margin-top: -15%;
+    }
+
+    &.timeline-item-mt-n18p {
+      margin-top: -18%;
+    }
   }
 }
